--- a/src/components/Login/Login.less
+++ b/src/components/Login/Login.less
@@ -6,7 +6,7 @@
   font-display: swap;
 }
 
-.mindnet-login {
+.login {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -19,7 +19,7 @@
   background-position: center;
 }
 
-.mindnet-login-container {
+.login-container {
   display: flex;
   flex-direction: row;
   max-width: 940px;
@@ -27,16 +27,16 @@
   margin: auto;
 }
 
-.mindnet-login-section {
+.login-section {
   display: flex;
   flex-direction: column;
   flex: 1;
-  background-color: rgba(250, 250, 250, 1);
+  background-color: rgb(242, 242, 242, 1);
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
 }
 
-.mindnet-login-icon-container {
+.login-icon-container {
   width: 100%;
   height: 100px;
   display: flex;
@@ -45,12 +45,12 @@
   margin-top: 35px;
 }
 
-.mindnet-login-icon {
+.login-icon {
   width: 68px;
   height: 68px;
 }
 
-.mindnet-login-title-container {
+.login-title-container {
   width: 100%;
   height: auto;
   display: flex;
@@ -60,7 +60,7 @@
   margin-top: 8px;
 }
 
-.mindnet-login-title-text {
+.login-title-text {
   overflow-wrap: break-word;
   color: rgba(0, 0, 0, 1);
   font-family: "VT323";
@@ -71,15 +71,15 @@
   margin-right: 5px;
 }
 
-.mindnet-login-title-text.purple {
+.login-title-text.purple {
   color: #4e2a84;
 }
 
-.mindnet-login-title-text.last {
+.login-title-text.last {
   margin-right: 20px;
 }
 
-.mindnet-login-content-container {
+.login-content-container {
   width: 100%;
   height: auto;
   display: flex;
@@ -89,18 +89,18 @@
   margin-top: 35px;
 }
 
-.mindnet-login-email-container {
+.login-email-container {
   min-width: 70% !important;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 10px !important;
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
 }
 
-.mindnet-login-email {
+.login-email {
   padding-right: 18px !important;
 }
 
-.mindnet-login-email input {
+.login-email input {
   overflow-wrap: break-word !important;
   font-family: "Gilroy" !important;
   white-space: nowrap !important;
@@ -110,7 +110,7 @@
   margin: 4.5px 0 4.5px 0 !important;
 }
 
-.mindnet-login-password-container {
+.login-password-container {
   margin-top: 25px !important;
   min-width: 70% !important;
   background-color: #ffffff;
@@ -118,11 +118,11 @@
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
 }
 
-.mindnet-login-password {
+.login-password {
   padding-right: 18px !important;
 }
 
-.mindnet-login-password input {
+.login-password input {
   overflow-wrap: break-word !important;
   font-family: "Gilroy" !important;
   white-space: nowrap !important;
@@ -132,7 +132,7 @@
   margin: 4.5px 0 4.5px 0 !important;
 }
 
-.mindnet-login-test-container {
+.login-test-container {
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -140,7 +140,7 @@
   margin-right: 30%;
 }
 
-.mindnet-login-test-button {
+.login-test-button {
   padding: 0 !important;
   overflow-wrap: break-word !important;
   color: #8f8f8f !important;
@@ -152,7 +152,7 @@
   text-transform: none !important;
 }
 
-.mindnet-login-sign-in-button {
+.login-sign-in-button {
   margin-top: 25px !important;
   background-color: #4e2a84 !important;
   overflow-wrap: break-word !important;
@@ -169,7 +169,7 @@
   box-shadow: none !important;
 }
 
-.mindnet-login-continue-with-text {
+.login-continue-with-text {
   margin-top: 35px;
   overflow-wrap: break-word;
   color: #8f8f8f;
@@ -180,7 +180,7 @@
   font-weight: 600;
 }
 
-.mindnet-login-other-sign-in-container {
+.login-other-sign-in-container {
   margin-top: 35px;
   width: 70%;
   height: auto;
@@ -190,7 +190,7 @@
   align-items: center;
 }
 
-.mindnet-login-google-sign-in-button {
+.login-google-sign-in-button {
   background-color: #ffffff !important;
   flex: 1;
   min-height: 52px !important;
@@ -198,7 +198,7 @@
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3) !important;
 }
 
-.mindnet-slogan-section {
+.slogan-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -212,7 +212,7 @@
   background-position: center center;
 }
 
-.mindnet-fuzzy-glass-section {
+.fuzzy-glass-section {
   width: 84%;
   height: 90%;
   display: flex;
@@ -224,12 +224,12 @@
   box-shadow: 0 7px 7px rgba(0, 0, 0, 0.7);
 }
 
-.mindnet-fuzzy-glass-section img,
-.mindnet-fuzzy-glass-section p {
+.fuzzy-glass-section img,
+.fuzzy-glass-section p {
   transition: opacity 0.5s ease-in-out;
 }
 
-.mindnet-fuzzy-glass-slogan {
+.fuzzy-glass-slogan {
   overflow-wrap: break-word;
   color: darkred;
   font-family: "Lato", sans-serif;
@@ -247,7 +247,7 @@
     0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
 }
 
-.mindnet-fuzzy-glass-three-dots {
+.fuzzy-glass-three-dots {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -255,7 +255,7 @@
   margin-bottom: 20px;
 }
 
-.mindnet-fuzzy-glass-dot {
+.fuzzy-glass-dot {
   height: 8px;
   width: 8px;
   margin: 0 5px;
@@ -265,7 +265,7 @@
   transition: all 0.3s ease;
 }
 
-.mindnet-fuzzy-glass-dot.active {
+.fuzzy-glass-dot.active {
   width: 25px;
   background-color: #ffffff;
 }
