--- a/src/components/Result/Result.less
+++ b/src/components/Result/Result.less
@@ -82,10 +82,17 @@
   margin: 15px 0 20px 40px;
 }
 
-.result-network-visualization-container {
+.result-visualization-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+
+.network-visualization-container {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  flex: 0.5;
+  min-height: 664px;
 }
 
 .network-visualization-title {
@@ -101,19 +108,13 @@
 
 .network-visualization {
   display: flex;
-  flex-direction: row;
-}
-
-.network-visualization-image-container {
-  display: flex;
-  flex: 0.5;
   flex-flow: column nowrap;
 }
 
 .network-visualization-image {
   width: 640px;
   height: 480px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .network-visualization-description {
@@ -127,7 +128,65 @@
   margin-left: 155px;
 }
 
-.result-network-explain-container {
+.network-visualization-explain {
+  color: black;
+  font-family: "Gilroy", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  width: 600px;
+  margin: 40px 0 0 40px;
+}
+
+.popularity-visualization-container {
   display: flex;
+  flex-direction: column;
   flex: 0.5;
+  min-height: 664px;
+}
+
+.popularity-visualization-title {
+  color: black;
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: left;
+  white-space: nowrap;
+  overflow-wrap: break-word;
+}
+
+.popularity-visualization {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.popularity-visualization-doughnut {
+  width: 100%;
+  height: 420px;
+  margin: 30px 0 0 120px;
+}
+
+.popularity-visualization-description {
+  color: grey;
+  font-family: "Gilroy", sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: left;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  margin: 30px 0 0 160px;
+}
+
+.popularity-visualization-explain {
+  color: black;
+  font-family: "Gilroy", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  width: 600px;
+  margin: 40px 0 0 40px;
 }
