--- a/src/components/Result/Result.less
+++ b/src/components/Result/Result.less
@@ -79,7 +79,7 @@
   text-align: left;
   white-space: wrap;
   overflow-wrap: break-word;
-  margin: 15px 0 20px 40px;
+  margin: 15px 150px 20px 40px;
 }
 
 .result-visualization-container {
@@ -92,7 +92,6 @@
   display: flex;
   flex-direction: column;
   flex: 0.5;
-  min-height: 664px;
 }
 
 .network-visualization-title {
@@ -140,14 +139,13 @@
   margin: 40px 0 0 40px;
 }
 
-.popularity-visualization-container {
+.result-explaination-container {
   display: flex;
   flex-direction: column;
   flex: 0.5;
-  min-height: 664px;
 }
 
-.popularity-visualization-title {
+.result-explaination-title {
   color: black;
   font-family: "Noto Sans JP", sans-serif;
   font-size: 24px;
@@ -155,37 +153,4 @@
   text-align: left;
   white-space: nowrap;
   overflow-wrap: break-word;
-}
-
-.popularity-visualization {
-  display: flex;
-  flex-flow: column nowrap;
-}
-
-.popularity-visualization-doughnut {
-  height: 420px;
-  margin: 30px 0 0 120px;
-}
-
-.popularity-visualization-description {
-  color: grey;
-  font-family: "Gilroy", sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-  text-align: left;
-  white-space: wrap;
-  overflow-wrap: break-word;
-  margin: 30px 0 0 160px;
-}
-
-.popularity-visualization-explain {
-  color: black;
-  font-family: "Gilroy", sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  text-align: left;
-  white-space: wrap;
-  overflow-wrap: break-word;
-  width: 600px;
-  margin: 40px 0 0 40px;
 }
