--- a/src/components/Result/Result.less
+++ b/src/components/Result/Result.less
@@ -105,6 +105,14 @@
   margin-left: 20px;
 }
 
+.network-visualization-tab-container {
+  margin: 15px 0 0 60px;
+}
+
+.network-visualization-tab-container button {
+  min-width: 180px !important;
+}
+
 .network-visualization {
   display: flex;
   flex-flow: column nowrap;
@@ -117,26 +125,14 @@
 }
 
 .network-visualization-description {
+  width: 640px;
   color: grey;
   font-family: "Gilroy", sans-serif;
   font-size: 12px;
   font-weight: bold;
-  text-align: left;
+  text-align: center;
   white-space: wrap;
   overflow-wrap: break-word;
-  margin-left: 155px;
-}
-
-.network-visualization-explain {
-  color: black;
-  font-family: "Gilroy", sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  text-align: left;
-  white-space: wrap;
-  overflow-wrap: break-word;
-  width: 600px;
-  margin: 40px 0 0 40px;
 }
 
 .result-explaination-container {
@@ -153,4 +149,128 @@
   text-align: left;
   white-space: nowrap;
   overflow-wrap: break-word;
+}
+
+.result-explaination-criteria {
+  color: black;
+  font-family: "Gilroy", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  width: 600px;
+  margin: 20px 0 0 40px;
+}
+
+.result-explaination-degree-container {
+  display: flex;
+  flex-flow: column nowrap;
+  margin-top: 20px;
+}
+
+.result-explaination-degree-title {
+  color: black;
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: left;
+  white-space: nowrap;
+  overflow-wrap: break-word;
+}
+
+.result-explaination-degree {
+  color: black;
+  font-family: "Gilroy", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  width: 600px;
+  margin: 20px 0 0 40px;
+}
+
+.result-explaination-closeness-container {
+  display: flex;
+  flex-flow: column nowrap;
+  margin-top: 20px;
+}
+
+.result-explaination-closeness-title {
+  color: black;
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: left;
+  white-space: nowrap;
+  overflow-wrap: break-word;
+}
+
+.result-explaination-closeness {
+  color: black;
+  font-family: "Gilroy", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  width: 600px;
+  margin: 20px 0 0 40px;
+}
+
+.result-explaination-eigenvector-container {
+  display: flex;
+  flex-flow: column nowrap;
+  margin-top: 20px;
+}
+
+.result-explaination-eigenvector-title {
+  color: black;
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: left;
+  white-space: nowrap;
+  overflow-wrap: break-word;
+}
+
+.result-explaination-eigenvector {
+  color: black;
+  font-family: "Gilroy", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  width: 600px;
+  margin: 20px 0 0 40px;
+}
+
+.result-explaination-reciprocity-container {
+  display: flex;
+  flex-flow: column nowrap;
+  margin-top: 20px;
+}
+
+.result-explaination-reciprocity-title {
+  color: black;
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: left;
+  white-space: nowrap;
+  overflow-wrap: break-word;
+}
+
+.result-explaination-reciprocity {
+  color: black;
+  font-family: "Gilroy", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  width: 600px;
+  margin: 20px 0 40px 40px;
 }
