--- a/src/components/Result/Result.less
+++ b/src/components/Result/Result.less
@@ -66,7 +66,7 @@
   margin-top: 10px;
 }
 
-.user-mapping-item {  
+.user-mapping-item {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -181,6 +181,18 @@
   text-align: center;
   white-space: wrap;
   overflow-wrap: break-word;
+}
+
+.network-visualization-user-mapping {
+  width: 640px;
+  color: red;
+  font-family: "Gilroy", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  white-space: wrap;
+  overflow-wrap: break-word;
+  margin: 40px 0 0 15px;
 }
 
 .result-explaination-container {
